--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,6 @@ fieldset{
 		background: -moz-linear-gradient(top, #eee, #fff);
 		margin:10px;
 		-moz-border-radius: 5px;
-		-o-border-radius: 5px;
+		border-radius: 5px;
 		box-shadow:2px 2px 2px #eee;
 }
